# academic-pdf-translator

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt  translate.py
src/: __init__.py  config.py  main.py
src/pdf/: __init__.py  extractor.py  markdown_renderer.py  mineru_parser.py  processor.py  renderer.py
src/translators/: __init__.py  base.py  google.py  local_llm.py  openai.py  prompts.py
src/utils/: __init__.py  text.py
